Upgraded Spring Boot to v2.7.8 Removed support for documents4j, JODConverter is enough for ECM purpose Greatly improved rendition service using spring boot starter for jod converter Rendition service PDF generating is transactional both for DB and file system Added rendition service tests